--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ h2{
     font-size: 3em;
     color: #282A35;
     margin: 15px 0;
+    text-align: center;
+    justify-content: center;
 }
 .btn-group{
     width: 100%;
