--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h2{
     display: flex;
     justify-content: center;
     margin-top: 15px;
+
 }
 button{
     position: absolute;
@@ -55,7 +56,7 @@ button{
     outline: none;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .5);
-
+    justify-content: space-between;
 }
 button:hover{
     transition-delay: 0s, 1s;
